k8s-manifests/frontend/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: frontend
  name: frontend-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: frontend
  type: NodePort
