k8s-manifests/frontend/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
  name: frontend-ingress
spec:
  rules:
    - host: group19.sdu.eficode.academy
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-svc
                port:
                  number: 8080
